# docFR

./: README.md
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
main/: pyproject.toml
main/src/main/Backend/: main.py  schema.py
main/src/main/agent/: graph.py  helper_functions.py
