[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Hussein",email = "ah0979075074@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core (>=1.3.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langgraph (>=1.1.8,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "main", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
