[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Hussein",email = "ah0979075074@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-core (>=1.3.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langgraph (>=1.1.8,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "ipython (>=9.13.0,<10.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "main", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
